Fix logo visibility in dark mode by adjusting contrast #435

--- a/src/app/component/logo/logo.component.css
+++ b/src/app/component/logo/logo.component.css
@@ -1,7 +1,11 @@
-.logo {  
-    width: 200px;  
-    height: auto;  
-    text-align: center;  
-    padding: 5px;  
+.logo {
+    width: 200px;
+    height: auto;
+    text-align: center;
+    padding: 5px;
     /*border: 3px solid blue; */
-    }  
+}
+
+:host-context(.dark-theme) .logo {
+    filter: invert(1) hue-rotate(180deg);
+}
